--- a/index.html
+++ b/index.html
@@ -355,11 +355,12 @@
             flex-grow: 1;
             overflow-y: auto;
             padding: 40px;
-            min-height: 0; /* Critical for flex shrinking */
+            min-height: 0; /* FIX: Allows flex item to shrink properly */
         }
         #persistent-timeline-wrapper {
             flex-shrink: 0;
             border-top: 1px solid rgba(155, 89, 182, 0.3);
+            padding: 10px 40px 0 40px;
             background: var(--bg-content);
             transition: background 0.5s ease, border-top-color 0.5s ease;
         }
@@ -433,7 +434,7 @@
         }
         
         .timeline-section {
-             padding: 10px 40px 0 40px;
+             padding-bottom: 10px;
         }
 
         .timeline-scroll-wrapper {
@@ -663,10 +664,10 @@
             "I'll remember that I can choose to do anything other than decided tasks too, or not do decided tasks, and that will be just okay."
         ];
         const MIND_OPTIONS = [
-            "I think I can work in an interview today.",
-            "Maybe I can take you along for a trip to the shower?",
-            "I'd love a little one-on-one video call, maybe.",
-            "Can you just teach me how to dirty-talk well with you?"
+            "I think I can work in an interview today. 😋",
+            "Maybe I can take you along for a trip to the shower? 🚿",
+            "I'd love a little one-on-one video call, maybe. 💞",
+            "Can you just teach me how to dirty-talk well with you? 😙"
         ];
         const WHEEL_OPTIONS = [
             "10-sec video of my smile",
@@ -1000,8 +1001,7 @@
             document.getElementById('wheel-svg-container').innerHTML = svgContent;
         }
 
-        function spinTheWheel(e) {
-            e.stopPropagation();
+        function spinTheWheel() {
             if (appState.wheelSpinning) return;
             appState.wheelSpinning = true;
             document.getElementById('spinBtn').disabled = true;
@@ -1028,7 +1028,6 @@
                 card.className = className;
                 card.innerHTML = `<span>${optionText}</span>`;
                 card.addEventListener('click', (e) => {
-                    e.stopPropagation(); 
                     clickHandler(optionText);
                 });
                 container.appendChild(card);
@@ -1048,14 +1047,14 @@
                 const rootItem = document.createElement('span');
                 rootItem.className = 'breadcrumb-item';
                 rootItem.textContent = classNames.root;
-                rootItem.addEventListener('click', (e) => { e.stopPropagation(); resetNav(); });
+                rootItem.addEventListener('click', (e) => { resetNav(); });
                 breadcrumbContainer.appendChild(rootItem);
                 navigationPath.forEach((item, index) => {
                     breadcrumbContainer.innerHTML += `<span class="breadcrumb-separator"> </span>`;
                     const breadcrumbItem = document.createElement('span');
                     breadcrumbItem.className = 'breadcrumb-item';
                     breadcrumbItem.textContent = item;
-                    breadcrumbItem.addEventListener('click', (e) => { e.stopPropagation(); navigateTo(index); });
+                    breadcrumbItem.addEventListener('click', (e) => { navigateTo(index); });
                     breadcrumbContainer.appendChild(breadcrumbItem);
                 });
                 contentArea.appendChild(breadcrumbContainer);
@@ -1071,7 +1070,6 @@
                 optionEl.className = classNames.option;
                 optionEl.innerHTML = `<span>${optionText}</span>`;
                 optionEl.addEventListener('click', (e) => {
-                    e.stopPropagation();
                     clickHandler(optionText, clickLevel);
                 });
                 contentArea.appendChild(optionEl);
@@ -1088,7 +1086,7 @@
                     const optionEl = document.createElement('div');
                     optionEl.className = 'play-option';
                     optionEl.innerHTML = `<span>${option}</span>`;
-                    optionEl.addEventListener('click', (e) => { e.stopPropagation(); handlePlayOptionClick(option); });
+                    optionEl.addEventListener('click', (e) => { handlePlayOptionClick(option); });
                     contentArea.appendChild(optionEl);
                 });
             } else {
@@ -1098,7 +1096,7 @@
                 const rootItem = document.createElement('span');
                 rootItem.className = 'breadcrumb-item';
                 rootItem.textContent = 'Games';
-                rootItem.addEventListener('click', (e) => { e.stopPropagation(); resetPlayNavigation(); });
+                rootItem.addEventListener('click', (e) => { resetPlayNavigation(); });
                 breadcrumbContainer.appendChild(rootItem);
                 breadcrumbContainer.innerHTML += `<span class="breadcrumb-separator"> </span><span class="breadcrumb-item">${selectedOption}</span>`;
                 contentArea.appendChild(breadcrumbContainer);
@@ -1106,7 +1104,7 @@
                     const subOptionEl = document.createElement('div');
                     subOptionEl.className = 'play-sub-option';
                     subOptionEl.textContent = subOption;
-                    subOptionEl.addEventListener('click', (e) => { e.stopPropagation(); handlePlaySubClick(subOption); });
+                    subOptionEl.addEventListener('click', (e) => { handlePlaySubClick(subOption); });
                     contentArea.appendChild(subOptionEl);
                 });
             }
