--- a/index.html
+++ b/index.html
@@ -1319,7 +1319,7 @@
             if (savedUser && currentUserEl) {
                 if (savedUser === 'you') {
                     currentUserEl.dataset.user = 'you';
-                    currentUserEl.textContent = 'awka';
+                    currentUserEl.textContent = 'arka';
                 } else {
                     currentUserEl.dataset.user = 'her';
                     currentUserEl.textContent = 'babygirl';
