--- a/index.html
+++ b/index.html
@@ -499,10 +499,10 @@
             "I'll remember that I can choose to do anything other than decided tasks too, or not do decided tasks, and that will be just okay."
         ];
         const MIND_OPTIONS = [
-            "I think I can work in an interview today. 😋",
-            "Maybe I can take you along for a trip to the shower? 🚿",
-            "I'd love a little one-on-one video call, maybe. 💞",
-            "Can you just teach me how to dirty-talk well with you? 😙"
+            "I think I can work in an interview today.",
+            "Maybe I can take you along for a trip to the shower?",
+            "I'd love a little one-on-one video call, maybe.",
+            "Can you just teach me how to dirty-talk well with you?"
         ];
         const WHEEL_OPTIONS = [ "10-sec video of my smile", "I'll get you to write me something spicy", "Nude silhouette picture of me, against a light", "A photo of me wearing pink, in any form", "I'll choose a mango milkshake from the website", "I'll write your name on my wrist", "I will describe my outfit in detail", "I will ask you for a mango milkshake" ];
         const DRIVE_OPTIONS = {
