--- a/index.html
+++ b/index.html
@@ -602,8 +602,8 @@
         ];
 
         const ANNIVERSARIES = {
-            "01-19": "Happy Anniversary of your nervous affirmation. You were worth the wait.",
-            "05-26": "Happy 'halfway to ownership' Anniversary. A perfect moment.",
+            "01-19": "happy anniversary, dearest. can't wait to spend my life with you.",
+            "05-26": "another year goes by of having had you on my lap topless for the firs time ever, today in 2023!",
             // Add future anniversaries here in MM-DD format
         };
         
