--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
 
         const ANNIVERSARIES = {
             "01-19": "happy anniversary, dearest. can't wait to spend my life with you.",
-            "05-26": "another year goes by of having had you on my lap topless for the firs time ever, today in 2023!",
+            "05-26": "another year goes by of having had you on my lap topless for the first time ever, today in 2023!",
             // Add future anniversaries here in MM-DD format
         };
         
