--- a/index.html
+++ b/index.html
@@ -591,14 +591,14 @@
         
         // NEW: Data for Daily Question and "On This Day" features
         const DAILY_QUESTIONS = [
-            "What's one small thing that made you smile today?",
-            "If we could go anywhere in the world right now, where would you want to be?",
-            "What's a secret you've never told me?",
-            "Describe a perfect lazy Sunday with me.",
-            "What's one thing I do that always makes you feel loved?",
-            "What song is stuck in your head today?",
-            "If you could have any superpower for a day, what would it be and why?",
-            "What's the silliest thing you're proud of?",
+            "what's one small thing i do that makes you go beep beep?",
+            "if we could go anywhere in the world right now, where would you want to be?",
+            "rate how much you like sending mango milkshakes versus receiving them.",
+            "tell me how badly you want me inside you. ok?",
+            "do you like it more when i write you sexual fantasies, or when i talk about me cuddling you?",
+            "how do you think this website can be made better?",
+            "hi, baby. would you like to get naked for me today?",
+            "would you tell me about something you're proud of in our life?",
         ];
 
         const ANNIVERSARIES = {
@@ -644,7 +644,7 @@
                 
                 featureHTML = `
                     <div class="daily-feature">
-                        <h3>A Question for You...</h3>
+                        <h3>answer me, won't you, prettiest?</h3>
                         <p>${question}</p>
                     </div>`;
             }
