--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
             "what's one small thing i do that makes you go beep beep?",
             "if we could go anywhere in the world right now, where would you want to be?",
             "rate how much you like sending mango milkshakes versus receiving them.",
-            "tell me how badly you want me inside you. ok?",
+            "tell me how badly you want me inside you.",
             "do you like it more when i write you sexual fantasies, or when i talk about me cuddling you?",
             "how do you think this website can be made better?",
             "hi, baby. would you like to get naked for me today?",
